# DMP_chebotar

./: CMakeLists.txt  CanonicalSystem.h  CanonicalSystemDiscrete.cpp  CanonicalSystemDiscrete.h  DMP.cpp  DMP.h  DMPState.h  DataRecorder.cpp  DataRecorder.h  DmpAPI.h  DmpUltimate.cpp  DmpUltimate.h  FunctionApproximator.h  ImpedanceCoupling.cpp  ImpedanceCoupling.h  LWRApproximatorDiscrete.cpp  LWRApproximatorDiscrete.h  LWRDataRecorder.cpp  LWRDataRecorder.h  LWRLearningSystem.cpp  LWRLearningSystem.h  LearningSystem.h  README.md  SpatialCoupling.h  TemporalCoupling.h  Trajectory.cpp  Trajectory.h  TransformSystemDiscrete.cpp  TransformSystemDiscrete.h  TransformationSystem.h  dmp_test_learning.cpp  dmp_util.h
